--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 
-spring.datasource.driver-class-name: oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
 spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username: javatree
 spring.datasource.password: javatree
